WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278571
Fix debug assertion in WebPageProxy::loadDataWithNavigationShared after
282655@main
https://bugs.webkit.org/show_bug.cgi?id=278571
Summary
Fix debug assertion in WebPageProxy::loadDataWithNavigationShared after 28265...
Alex Christensen
Reported
2024-08-23 12:42:06 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-23 12:42:15 PDT
<
rdar://problem/134583835
>
Alex Christensen
Comment 2
2024-08-23 12:43:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32637
EWS
Comment 3
2024-08-23 12:48:52 PDT
Committed
282669@main
(d152a53cf0d1): <
https://commits.webkit.org/282669@main
> Reviewed commits have been landed. Closing PR #32637 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug