Cherry-pick 282669@main (d152a53cf0d1). https://bugs.webkit.org/show_bug.cgi?id=278571

Fix debug assertion in WebPageProxy::loadDataWithNavigationShared after 282655@main
    https://bugs.webkit.org/show_bug.cgi?id=278571
    rdar://134583835

    Reviewed by Richard Robinson.

    This fixes any use of WKWebView.loadData in a debug build.
    Covered by many API tests, which unfortunately have no EWS coverage.

    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::loadDataWithNavigationShared):

    Canonical link: https://commits.webkit.org/282669@main

Canonical link: https://commits.webkit.org/282416.58@webkitglib/2.46